# aprendendo-estatistica

./: Dockerfile  LICENSE  mkdocs.yml  pyproject.toml
.streamlit/: config.toml
aprendendo_estatistica/: config.ipynb  import_data.py  streamlit_app.py
aprendendo_estatistica/classes/: equations.py
aprendendo_estatistica/data/: import_data.py
aprendendo_estatistica/notebooks/: config.ipynb
aprendendo_estatistica/page_topics/: central_tendency.py  dispersion_graphs.py  dispersion_measures.py  graphs.py  introduction.py  learning_features.py
aprendendo_estatistica/topics/: central_tendency.py  dispersion_measures.py  graphs.py  introduction.py  learning_features.py
docs/: index.md
