[tool.poetry]
name = "aprendendo-estatistica"
version = "0.1.0"
description = ""
authors = ["“Gutto <“guttolaudie@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
nbformat = "^5.9.2"
ipykernel = "^6.29.3"
jupyter = "^1.0.0"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
streamlit = "^1.31.1"
pandas = "^2.2.1"
ucimlrepo = "^0.0.3"
plotly = "^5.19.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
ipykernel = "^6.29.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.11"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath ="."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=aprendendo-estatistica -vv"
post_test = "coverage html"
